# code-meetup-presentation

./: README.md  pyproject.toml
aling_nena/: script.py
automation/: script.py
dog_api/: script.py
new_genes/: main.py  temp.mid
sample/code_meetup/: manage.py
sample/code_meetup/attendance/: admin.py  models.py
sample/code_meetup/attendance/migrations/: 0001_initial.py
sample/code_meetup/code_meetup/: asgi.py  settings.py  urls.py  wsgi.py
spider/: main.py
web/: app.py
web/templates/: about.html  layout.html  projects.html  skills.html
