[tool.poetry]
name = "code-meetup"
version = "0.1.0"
description = ""
authors = ["Zorex <zorex@brokerengine.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"
musicpy = "^6.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
